testing/testFirst/test4_data/expected.txt
input.am:4  warning: '.data' variables may be inaccessible without label
 4  | .data 3,-3,13
    | ^~~~~
input.am:5  error: 'xxx' undeclared (first use in this directive)
 5  | D4: .data xxx
    |           ^~~
input.am:6  error: 'yyy' undeclared (first use in this directive)
 6  | D5: .data 5, yyy
    |              ^~~
input.am:8  error: label 's' is not a directive of define
 8  | D6: .data s
    |           ^
input.am:9  error: '+7000000000' exceeds integer bounds [-(2^14-1), 2^13-1]
 9  | D7: .data +7000000000
    |           ^~~~~~~~~~~
input.am:10 error: '-800000000' exceeds integer bounds [-(2^14-1), 2^13-1]
 10 | D8: .data -800000000
    |           ^~~~~~~~~~
input.am:11 error: ' 'empty integer initializer
 11 | D9: .data 
    |          ^
input.am:12 error: expected ',' before '11'
 12 | D10: .data 10 11
    |               ^~
input.am:13 error: expected ',' before '-13'
 13 | D11: .data +11, 12 -13, 14
    |                    ^~~
input.am:14 error: expected ',' before 'z'
 14 | D12: .data -12 z, 13
    |                ^
input.am:15 error: expected integer before ','token
 15 | D13: .data 13,,14, -15, len
    |               ^
input.am:16 error: 'D1:' has already declared in earlier line
 16 | D1: .data 0
    | ^~~
input.am:17 error: '14D0:' starts with a non-alphabetic character
 17 | 14D0: .data 14,-14
    | ^~~~~
input.am:18 error: 'D15_d:' contains non-alphanumeric characters
 18 | D15_d: .data 15
    | ^~~~~~
| 100 | -100 | 11 | -2 | 20 | 3 | -3 | 13 | a |   |
 D1               0      directive       not external   
 len              0      define          not external    20   
 D2               3      directive       not external   
 s                8      directive       not external   
